css/style.css
/* RESET */
* {
    margin: 0;
    padding: 0;
    box-sizing: border-box;
}

html {
    font-size: 100%;
    font-family: 'Lato', sans-serif;
}

img {
    max-width: 100%;
}

a {
    text-decoration: none;
    color: inherit;
}

input {
    font-size: 100%;
    font-family: 'Lato', sans-serif;
}

/* VARIABLES */
:root {
    /* Colors */
    --col-white: #ffffff;
    --col-black: #000000;
    --col-bg-green: #009688;
    --col-bg-gray: #dbdbd1;
    --col-light-gray: #f8f8f8;
    --col-gray: #eaeaea;
    --col-dark-gray: #b1b1b1;
    /* --col-gray: #e9ebeb; */
    --col-user-msg: #d5f9ba;
    --col-bg-notification: #8edafc;
    --col-notification-gray: #4f7485;
}

/* COMMON */
.wrapper {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 100%;
    height: 100vh;
    background: linear-gradient(var(--col-bg-green) 0% 15%, var(--col-bg-gray) 15% 100%);
}

.container {
    width: 100%;
    height: calc(100% - 40px);
    margin: 0 auto;
    max-width: 1200px;

    /* DEBUG */
    background-color: var(--col-gray);
}

/* Sidebar */
.sidebar {
    width: calc(100% / 3);
    min-width: 300px;
    height: 100%;
    border-right: 1px solid var(--col-dark-gray);
    overflow-y: scroll;
}

/* Sidebar user */
.user-bar {
    height: 70px; 
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 0.6rem;
}

.user-identification {
    display: flex;
    align-items: center;
}

.user-image {
    width: 50px;
    border-radius: 50%;
}

.user-name {
    padding-left: 1rem;
}

.user-commands {
    font-size: 1.4rem;
    color: var(--col-dark-gray);
}

.user-commands a {
    padding-right: 1rem;
}

/* Sidebar notification */
.notification {
    background-color: var(--col-bg-notification);
    padding: 1rem;
}

.notification a {
    width: 100%;
    display: flex;
    align-items: center;
    align-content: center;
}

.notification-icon {
    flex-basis: 50px;
    width: 50px;
    height: 50px;
    line-height: 50px;
    text-align: center;
    border-radius: 50%;
    background-color: var(--col-white);
    color: var(--col-bg-notification);
    font-size: 1.3rem;
}

.notification-text {
    display: flex;
    flex-direction: column;
    padding-left: 1rem;
    line-height: 1.2rem;
}

.notification-text span:nth-child(2) {
    font-size: 0.8rem;
    color: var(--col-notification-gray);
    text-decoration: underline;
}

/* Sidebar Search */
.search.container {
    background-color: var(--col-light-gray);
}

.search-bar {
    display: flex;
    align-items: center;
    height: 2.3rem;
    background-color: var(--col-white);
    color: var(--col-dark-gray);
    margin: 0.4rem;
}

.search-bar-icon {
    display: flex;
    justify-content: center;
    align-items: center;
    width: 30%;
    height: 100%;
    border-right: 3px solid var(--col-light-gray);
}

.search-bar-input {
    width: 70%;

    text-align: center;
}

.search-bar label {
    display: none;
}

.search-bar input {
    width: 100%;
    height: 100%;
    padding: 0 1rem;

    font-size: 0.9rem;
    color: var(--col-dark-gray);
    border: none;
}

/* Sidebar Contact List */
.contact-card {
    display: flex;
    width: 100%;
    height: 90px;
    justify-content: space-between;
    align-items: center;

    padding: 0.6rem;
    background-color: var(--col-white);
    border-bottom: var(--col-gray);
}

.contact-card img {
    width: 70px;
    height: 70px;
    margin: 0 1rem;
   
    border-radius: 50%;
}

.contact-card .contact-text {
    display: flex;
    flex-direction: column;
    justify-content: flex-start;
    
    height: 100%;
    flex-grow: 1;
}

.contact-card .contact-last-msg {
    font-size: 0.7rem;
    padding-top: 0.5rem;
    color: var(--col-dark-gray);
}

.contact-last-time {
    height: 100%;
    font-size: 0.7rem;
    color: var(--col-dark-gray);
}

/* MAIN */
/* Main Chat Header */
.main-chat-header {
    height: 70;
}

